--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -419,7 +419,7 @@ tr:hover td {
 /* === Login Form Specific Styling === */
 .login-form fieldset {
   width: 100%;
-  max-width: 520px;
+  min-width: 400px;
   padding: 2.5rem 2.5rem;
   border: 1px solid var(--color-border);
   border-radius: 1rem;
@@ -509,6 +509,7 @@ tr:hover td {
 
 #btnGoRegister {
   background-color: transparent;
+  font-size: 0.8rem;
   color: var(--color-primary);
   border: 1px solid var(--color-primary);
   padding: 0.6rem 1.2rem;
