improved the layout of the seach patient.

--- a/Frontend/style/patient_list.css
+++ b/Frontend/style/patient_list.css
@@ -27,6 +27,10 @@ input {
   width: 90%;
 }
 
+#qFirst, #qLast {
+  height: 25px !important;
+}
+
 .searchPatientsForm {
   display: flex;
   justify-content: center;
