--- a/Frontend/style/login.css
+++ b/Frontend/style/login.css
@@ -23,6 +23,10 @@ body {
   background: linear-gradient(-135deg, #ffffff 0%, #a4b4e7 100%);
 }
 
+.container {
+  grid-template-columns: 1fr 1fr;
+}
+
 /* ===============================
    LOGIN PAGE: Illustration
    =============================== */
