--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -222,7 +222,7 @@ legend {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
   gap: 0;
   margin: 3rem auto;
   max-width: 1200px;
@@ -242,7 +242,7 @@ label {
   margin-top: 0.6rem;
 }
 
-input, textarea {
+/* input, textarea {
   width: 90%;
   padding: 0.65rem 0.8rem;
   border: 1px solid var(--color-border);
@@ -254,11 +254,11 @@ input, textarea {
   transition: border-color var(--transition), box-shadow var(--transition);
   
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+  margin-left: 0;
+  margin-right: 0;
+} */
 
-select {
+select, input, textarea {
   width: 100%;
   padding: 0.65rem 0.8rem;
   border: 1px solid var(--color-border);
