--- a/Frontend/style/login.css
+++ b/Frontend/style/login.css
@@ -13,7 +13,6 @@ body {
   background: repeating-linear-gradient(45deg, #f5faff 0, #f5faff 10px, #dbeafe 10px, #dbeafe 20px);      
 }
 
-
 .loginForm {
   display: flex;
   justify-content: center;
@@ -25,6 +24,11 @@ body {
 
 .container {
   grid-template-columns: 1fr 1fr;
+}
+
+input {
+  /* margin: 0; */
+  width: 90%;
 }
 
 /* ===============================
